Updated the slugs to have sub directory/category included

--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -99,7 +99,7 @@
     <li class="sidenav-item" *ngIf="isLoggedIn && isAdmin">
         <a [routerLink]="['/admin/meta']" class="sidenav-link">
             <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fal fa-chart-line"></i>&nbsp;Scripts</div>
+            <div><i class="fal fa-chart-line"></i>&nbsp;Meta</div>
         </a>
     </li>
 
