Can now make a page an external URL

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div class="container mb-3">
+<div class="container mb-3" *ngIf="!isExtURL">
     <div class="row">
         <div class="col-lg-8"></div>
         <div class="col-lg-4">
@@ -68,14 +68,37 @@
                             </p>
                         </div>
 
+                        <div class="form-group" *ngIf="isExtURL">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox"
+                                       class="custom-control-input"
+                                       id="isExtURL"
+                                       formControlName="isExtURL">
+                                <label class="custom-control-label"
+                                       for="isExtURL">Is this an external URL?</label>
+                            </div>
+                        </div>
 
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="isExtURL">
+                            <label>External URL</label>
+                            <input type="url"
+                                   class="form-control"
+                                   [class.invalid]="!f.extURL.valid && f.extURL.touched"
+                                   formControlName="extURL">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.extURL.valid && f.extURL.touched">
+                                <b>External URL</b> is invalid!
+                            </p>
+                        </div>
+
+
+                        <div class="form-group" *ngIf="!isExtURL">
                             <label>Slug</label>
                             <pre class="alert bg-light text-secondary slug">/{{category}}/{{url}}</pre>
                         </div>
 
 
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="!isExtURL">
                             <label>Body</label>
                             <ckeditor formControlName="body"
                                       [class.invalid]="!f.body.valid && f.body.touched"
@@ -89,7 +112,7 @@
                             </p>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="!isExtURL">
                             <label>Author</label>
                             <input type="text"
                                    class="form-control"
@@ -111,7 +134,7 @@
                                    class="form-control"
                                    bsDatepicker
                                    [bsConfig]="bsConfig"
-                                   placement="right"
+                                   placement="bottom"
                                    [class.invalid]="!f.date.valid && f.date.touched"
                                    formControlName="date">
                             <p class="help-block alert alert-warning text-center mt-1"
@@ -137,7 +160,7 @@
                             </select>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="!isExtURL">
                             <label for="category">Template</label>
                             <select class="form-control"
                                     id="template"
@@ -152,7 +175,7 @@
                         </div>
 
 
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="!isExtURL">
                             <div class="card image-uploader">
                                 <div class="card-body">
                                     <p class="card-title">
@@ -206,7 +229,7 @@
                         </div>
 
 
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="!isExtURL">
                             <label>Banner Image URL
                                 <small>(Top banner image)</small>
                             </label>
@@ -221,7 +244,7 @@
                             </p>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="!isExtURL">
                             <label>Image URL
                                 <small>(Image on the page)</small>
                             </label>
@@ -275,7 +298,7 @@
         </div>
 
 
-        <div class="col-md-6" *ngIf="page && togglePagePreview">
+        <div class="col-md-6" *ngIf="page && togglePagePreview && !isExtURL">
             <div class="card">
                 <p>Banner Photo</p>
                 <img class="card-img-top img-fluid" [src]="page.bannerPhotoURL" [alt]="page.title">
