Added animations to page details and edit so that it smooths out the page transitions

--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -48,6 +48,7 @@
                         </label>
                         <input type="url"
                                class="form-control"
+                               placeholder="https://"
                                [class.invalid]="!f.extURL.valid && f.extURL.touched"
                                formControlName="extURL">
                         <p class="help-block alert alert-warning text-center mt-1"
