--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
@@ -1,5 +1,5 @@
 <!-- * ADMIN-PAGE-DETAILS (PREVIEW) * -->
-<div class="row mb-4">
+<div class="row mb-4" [@simpleFadeAnimation]="'in'">
     <div class="container">
         <!-- * Edit Navbar Panel * -->
         <nav class="navbar navbar-expand-lg image-uploader bg-light text-light" *ngIf="page">
@@ -51,7 +51,7 @@
     </div>
 </div>
 
-<div class="row mb-5">
+<div class="row mb-5" [@simpleFadeAnimation]="'in'">
     <div *ngIf="page">
         <img class="img-fluid" [src]="page.photoURL" [alt]="page.title">
 
