--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<div class="container-fluid mb-5">
+<div class="container-fluid mb-5" [@simpleFadeAnimation]="'in'">
     <div class="row">
         <div class="col" *ngIf="page">
             <div class="card">
@@ -68,7 +68,7 @@
                             </p>
                         </div>
 
-                        <div class="form-group" *ngIf="isExtURL">
+                        <div class="form-group">
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox"
                                        class="custom-control-input"
@@ -298,7 +298,7 @@
         </div>
 
 
-        <div class="col-md-6" *ngIf="page && togglePagePreview && !isExtURL">
+        <div class="col-md-6" *ngIf="page && togglePagePreview && !isExtURL" [@simpleFadeAnimation]="'in'">
             <div class="card">
                 <p>Banner Photo</p>
                 <img class="card-img-top img-fluid" [src]="page.bannerPhotoURL" [alt]="page.title">
